--- a/Kirakira/app/src/main/res/layout/activity_login.xml
+++ b/Kirakira/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.prm.android.kirakira.LoginActivity">
+    tools:context="com.prm.android.kirakira.Controller.LoginActivity">
 
     <Button
         android:id="@+id/button6"
