--- a/Kirakira/app/src/main/res/layout/activity_login.xml
+++ b/Kirakira/app/src/main/res/layout/activity_login.xml
@@ -1,153 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.prm.android.kirakira.Controller.LoginActivity">
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="match_parent"
+                                             tools:context="com.prm.android.kirakira.Controller.LoginActivity">
 
     <Button
-        android:id="@+id/button6"
-        android:layout_width="50dp"
-        android:layout_height="48dp"
-        android:layout_marginLeft="30dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/button5"
-        app:layout_constraintDimensionRatio="w,1:1"
-        app:layout_constraintLeft_toRightOf="@+id/button5" />
+            android:id="@+id/button6"
+            android:layout_width="88dp"
+            android:layout_height="48dp"
+            android:layout_marginLeft="30dp"
+            app:layout_constraintBaseline_toBaselineOf="@+id/button5"
+            app:layout_constraintDimensionRatio="w,1:1"
+            app:layout_constraintLeft_toRightOf="@+id/button5" android:layout_marginStart="30dp"/>
 
     <Button
-        android:id="@+id/button5"
-        android:layout_width="50dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="0dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="w,1:1"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"
-        app:layout_constraintVertical_bias="0.169" />
+            android:id="@+id/button5"
+            android:layout_width="88dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintDimensionRatio="w,1:1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
+            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
+            android:visibility="visible" android:layout_height="48dp"
+            app:layout_constraintBottom_toTopOf="@+id/textView5" android:layout_marginBottom="8dp"/>
 
     <TextView
-        android:id="@+id/textView3"
-        android:layout_width="122dp"
-        android:layout_height="19dp"
-        android:layout_marginLeft="10dp"
-        android:text="sign up "
-        android:textSize="15sp"
-        app:layout_constraintLeft_toRightOf="@+id/textView4"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView4" />
+            android:id="@+id/tvRegister"
+            android:layout_width="122dp"
+            android:layout_height="19dp"
+            android:layout_marginLeft="10dp"
+            android:text="sign up "
+            android:textSize="15sp"
+            app:layout_constraintLeft_toRightOf="@+id/textView4"
+            app:layout_constraintBaseline_toBaselineOf="@+id/textView4" android:layout_marginStart="10dp"/>
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="0dp"
-        android:layout_height="143dp"
-        android:gravity="center"
-        android:text="WELCOME"
-        android:textSize="36sp"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="0dp" />
+            android:text="WELCOME"
+            android:layout_width="172dp"
+            android:layout_height="143dp"
+            android:gravity="center"
+            android:id="@+id/textView" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent" android:layout_marginRight="16dp"
+            android:layout_marginStart="16dp" app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp" android:textAlignment="center" android:textSize="36sp"/>
 
     <EditText
-        android:id="@+id/editText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
-        android:layout_marginTop="40dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Username"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+            android:id="@+id/edtUsernameLogin"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="32dp"
+            android:layout_marginTop="32dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp" android:hint="Enter your username" android:textAlignment="center"/>
 
     <EditText
-        android:id="@+id/editText2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
-        android:layout_marginTop="10dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Password"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+            android:id="@+id/edtPasswordLogin"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="32dp"
+            android:layout_marginTop="10dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/edtUsernameLogin" android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp" android:hint="Enter your password" android:textAlignment="center"/>
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="11dp"
-        android:text="forgot password"
-        android:textSize="15sp"
-        app:layout_constraintRight_toLeftOf="@+id/textView4"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView4" />
+            android:id="@+id/tvForgotPassword"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="11dp"
+            android:text="forgot password"
+            android:textSize="15sp"
+            app:layout_constraintRight_toLeftOf="@+id/textView4"
+            app:layout_constraintBaseline_toBaselineOf="@+id/textView4" android:layout_marginEnd="11dp"/>
 
     <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="|"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.533"
-        android:layout_marginTop="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="|"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintHorizontal_bias="0.52"
+            android:layout_marginTop="25dp"
+            app:layout_constraintTop_toBottomOf="@+id/edtPasswordLogin" android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"/>
 
     <android.support.constraint.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/guideline"
-        app:layout_constraintGuide_begin="20dp"
-        android:orientation="horizontal" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/guideline"
+            app:layout_constraintGuide_begin="20dp"
+            android:orientation="horizontal" tools:layout_editor_absoluteY="20dp" tools:layout_editor_absoluteX="0dp"/>
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="145dp"
-        android:layout_height="43dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:text="Login"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.095" />
+            android:id="@+id/btnLogin"
+            android:layout_width="145dp"
+            android:layout_height="48dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:text="Login"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView4"
+            app:layout_constraintVertical_bias="0.060000002" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
+            style="@android:style/Widget.Button.Inset"/>
 
     <Button
-        android:id="@+id/button2"
-        android:layout_width="50dp"
-        android:layout_height="48dp"
-        android:layout_marginRight="30dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/button5"
-        app:layout_constraintDimensionRatio="w,1:1"
-        app:layout_constraintRight_toLeftOf="@+id/button5" />
+            android:id="@+id/button2"
+            android:layout_width="88dp"
+            android:layout_height="48dp"
+            android:layout_marginRight="30dp"
+            app:layout_constraintBaseline_toBaselineOf="@+id/button5"
+            app:layout_constraintDimensionRatio="w,1:1"
+            app:layout_constraintRight_toLeftOf="@+id/button5" android:layout_marginEnd="30dp"
+            android:visibility="visible"/>
 
     <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="7Super"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
-        android:layout_marginBottom="10dp" />
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="7Super"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="10dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
 </android.support.constraint.ConstraintLayout>
