--- a/Kirakira/app/src/main/res/values/colors.xml
+++ b/Kirakira/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="dialog_cancel_bgcolor">#ff0000</color>
+    <color name="dialog_ok_bgcolor">#00BFFF</color>
 </resources>
