--- a/Kirakira/app/src/main/res/layout/activity_login.xml
+++ b/Kirakira/app/src/main/res/layout/activity_login.xml
@@ -148,4 +148,12 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="10dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
+
+    <Button
+        android:id="@+id/btnTest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Screen8"
+        tools:layout_editor_absoluteX="2dp"
+        tools:layout_editor_absoluteY="-3dp" />
 </android.support.constraint.ConstraintLayout>
