#do: sửa giao diện login và register

--- a/Kirakira/app/src/main/res/layout/activity_register.xml
+++ b/Kirakira/app/src/main/res/layout/activity_register.xml
@@ -8,85 +8,120 @@
         tools:context="com.prm.android.kirakira.Controller.RegisterActivity">
 
     <TextView
-            android:text="Register"
-            android:layout_width="172dp"
-            android:gravity="center"
-            android:id="@+id/textView2" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:textAlignment="center" android:textSize="36sp"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintLeft_creator="1" android:layout_height="80dp"/>
-    <EditText
-            android:id="@+id/edtRegUsername"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp" android:hint="Enter your username" android:textAlignment="center"
-            app:layout_constraintHorizontal_bias="0.45"
-            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
-            tools:layout_constraintRight_creator="1" tools:layout_constraintLeft_creator="1"/>
+        android:id="@+id/textView2"
+        android:layout_width="0dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="50dp"
+        android:gravity="center"
+        android:text="Register"
+        android:textAlignment="center"
+        android:textColor="@color/dialog_ok_bgcolor"
+        android:textSize="36sp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"/>
 
     <EditText
-            android:id="@+id/edtRegPassword"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
-            android:ems="10"
-            android:inputType="textPassword"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp" android:hint="Enter your password" android:textAlignment="center"
-            tools:layout_constraintRight_creator="1" tools:layout_constraintLeft_creator="1"
-            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/edtRegUsername"/>
+        android:id="@+id/edtRegUsername"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:ems="10"
+        android:hint="Enter your username"
+        android:inputType="textPersonName"
+        android:textAlignment="center"
+        android:textColorHint="@android:color/background_light"
+        app:layout_constraintHorizontal_bias="0.45"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"/>
+
     <EditText
-            android:id="@+id/edtRegConfirmPassword"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
-            android:ems="10"
-            android:inputType="textPassword"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp" android:hint="Confirm your password" android:textAlignment="center"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintLeft_creator="1"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/edtRegPassword"/>
+        android:id="@+id/edtRegPassword"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="Enter your password"
+        android:inputType="textPassword"
+        android:textAlignment="center"
+        android:textColorHint="@android:color/background_light"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edtRegUsername"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintHorizontal_bias="0.0"/>
+
     <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/edtRegFullname"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp"
-            app:layout_constraintRight_toRightOf="parent" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/edtRegConfirmPassword"
-            app:layout_constraintLeft_toLeftOf="parent" android:textAlignment="center" android:hint="Your full name"
-            android:layout_marginLeft="32dp" android:layout_marginRight="32dp"/>
+        android:id="@+id/edtRegConfirmPassword"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="Confirm your password"
+        android:inputType="textPassword"
+        android:textAlignment="center"
+        android:textColorHint="@android:color/background_light"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edtRegPassword"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintHorizontal_bias="0.0"/>
+
+    <EditText
+        android:id="@+id/edtRegFullname"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="Your full name"
+        android:inputType="textPersonName"
+        android:textAlignment="center"
+        android:textColorHint="@android:color/background_light"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edtRegConfirmPassword"
+        app:layout_constraintHorizontal_bias="0.0"/>
+
     <CheckBox
-            android:text="Agree with"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/cbRegLicense"
-            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/edtRegFullname"
-            android:layout_marginEnd="16dp" app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp" android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginLeft="16dp"
-            app:layout_constraintHorizontal_bias="0.3" android:checked="false"
-            android:textColor="@android:color/darker_gray"/>
+        android:id="@+id/cbRegLicense"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:checked="false"
+        android:text="Agree with"
+        android:textColor="@android:color/background_light"
+        app:layout_constraintHorizontal_bias="0.301"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edtRegFullname"/>
     <TextView
             android:text=" License"
             android:layout_width="wrap_content"
@@ -96,20 +131,32 @@
             android:textColor="@color/dialog_cancel_bgcolor"
             app:layout_constraintBaseline_toBaselineOf="@+id/cbRegLicense"
             app:layout_constraintLeft_toRightOf="@+id/cbRegLicense"/>
+
     <Button
-            android:text="Register"
-            android:layout_height="wrap_content"
-            android:id="@+id/btnRegister"
-            app:layout_constraintRight_toRightOf="parent" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/cbRegLicense"
-            app:layout_constraintLeft_toLeftOf="parent" style="@android:style/Widget.Button.Inset"
-            android:layout_width="145dp"/>
+        android:id="@+id/btnRegister"
+        style="@android:style/Widget.Button.Inset"
+        android:layout_width="100dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/register"
+        app:layout_constraintDimensionRatio="h,2.2:1"
+        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cbRegLicense"/>
+
     <TextView
-            android:text="Has an account?"
-            android:layout_width="0dp"
-            android:id="@+id/tvRegLogin"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent" android:textAlignment="center"
-            android:textSize="18sp" android:layout_height="30dp" android:textStyle="normal|italic"/>
+        android:id="@+id/tvRegLogin"
+        android:layout_width="0dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="8dp"
+        android:text="Has an account?"
+        android:textAlignment="center"
+        android:textColor="@android:color/background_light"
+        android:textSize="20sp"
+        android:textStyle="normal|italic"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 </android.support.constraint.ConstraintLayout>
