--- a/Kirakira/app/src/main/res/layout/activity_login.xml
+++ b/Kirakira/app/src/main/res/layout/activity_login.xml
@@ -2,155 +2,153 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
+                                             android:id="@+id/loginLayout"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
                                              tools:context="com.prm.android.kirakira.Controller.LoginActivity">
 
     <Button
-            android:id="@+id/button6"
-            android:layout_width="88dp"
-            android:layout_height="48dp"
-            android:layout_marginLeft="30dp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/button5"
-            app:layout_constraintDimensionRatio="w,1:1"
-            app:layout_constraintLeft_toRightOf="@+id/button5" android:layout_marginStart="30dp"/>
-
-    <Button
-            android:id="@+id/button5"
-            android:layout_width="88dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintDimensionRatio="w,1:1"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
-            android:visibility="visible" android:layout_height="48dp"
-            app:layout_constraintBottom_toTopOf="@+id/textView5" android:layout_marginBottom="8dp"
-            tools:layout_constraintRight_creator="1" tools:layout_constraintLeft_creator="1"/>
+        android:id="@+id/buttonGG"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="30dp"
+        android:background="@drawable/google_circle_color_512"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonFB"
+        app:layout_constraintDimensionRatio="w,1:1"
+        app:layout_constraintRight_toRightOf="@+id/btnLogin"/>
 
     <TextView
-            android:id="@+id/tvRegister"
-            android:layout_width="122dp"
-            android:layout_height="19dp"
-            android:layout_marginLeft="10dp"
-            android:text="sign up "
-            android:textSize="15sp"
-            app:layout_constraintLeft_toRightOf="@+id/textView4"
-            app:layout_constraintBaseline_toBaselineOf="@+id/textView4" android:layout_marginStart="10dp"/>
+        android:id="@+id/tvRegister"
+        android:layout_width="0dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="8dp"
+        android:text="Register"
+        android:textAlignment="center"
+        android:textColor="@android:color/background_light"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <TextView
-            android:text="WELCOME"
-            android:layout_width="172dp"
-            android:layout_height="143dp"
-            android:gravity="center"
-            android:id="@+id/textView" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:textAlignment="center" android:textSize="36sp" tools:layout_constraintRight_creator="1"
-            tools:layout_constraintLeft_creator="1"/>
+        android:id="@+id/textView"
+        android:layout_width="0dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="50dp"
+        android:gravity="center"
+        android:text="WELCOME"
+        android:textAlignment="center"
+        android:textColor="@color/dialog_ok_bgcolor"
+        android:textSize="36sp"
+        android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"/>
 
     <EditText
-            android:id="@+id/edtUsernameLogin"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
-            android:layout_marginTop="32dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintLeft_creator="1"
-            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp" android:hint="Enter your username" android:textAlignment="center"
-            app:layout_constraintBottom_toTopOf="@+id/edtPasswordLogin" android:layout_marginBottom="10dp"/>
+        android:id="@+id/edtUsernameLogin"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:contentDescription="UserName"
+        android:ems="10"
+        android:hint="Username"
+        android:inputType="textPersonName"
+        android:textAlignment="center"
+        android:textColor="@android:color/background_light"
+        android:textColorHint="@android:color/background_light"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"/>
 
     <EditText
-            android:id="@+id/edtPasswordLogin"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
-            android:ems="10"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintLeft_creator="1"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp" android:hint="Enter your password" android:textAlignment="center"
-            android:inputType="textPassword" tools:layout_constraintTop_creator="1"
-            tools:layout_constraintBottom_creator="1" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="224dp" android:layout_marginBottom="224dp"
-            app:layout_constraintTop_toTopOf="@+id/guideline"/>
+        android:id="@+id/edtPasswordLogin"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:textAlignment="center"
+        android:textColor="@android:color/background_light"
+        android:textColorHint="@android:color/background_light"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edtUsernameLogin"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1"/>
 
     <TextView
-            android:id="@+id/tvForgotPassword"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="11dp"
-            android:text="forgot password"
-            android:textSize="15sp"
-            app:layout_constraintRight_toLeftOf="@+id/textView4"
-            app:layout_constraintBaseline_toBaselineOf="@+id/textView4" android:layout_marginEnd="11dp"/>
-
-    <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="|"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintHorizontal_bias="0.52"
-            android:layout_marginTop="25dp"
-            app:layout_constraintTop_toBottomOf="@+id/edtPasswordLogin" android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"/>
+        android:id="@+id/tvForgotPassword"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="forgot password"
+        android:textAlignment="center"
+        android:textColor="@android:color/background_light"
+        android:textSize="18sp"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edtPasswordLogin"/>
 
     <android.support.constraint.Guideline
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/guideline"
-            app:layout_constraintGuide_begin="20dp"
-            android:orientation="horizontal" tools:layout_editor_absoluteY="20dp" tools:layout_editor_absoluteX="0dp"/>
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="20dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="20dp"/>
 
     <Button
-            android:id="@+id/btnLogin"
-            android:layout_width="145dp"
-            android:layout_height="48dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
-            android:text="Login"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4"
-            app:layout_constraintVertical_bias="0.060000002"
-            style="@android:style/Widget.Button.Inset" tools:layout_constraintRight_creator="1"
-            tools:layout_constraintLeft_creator="1"/>
+        android:id="@+id/btnLogin"
+        style="@android:style/Widget.Button.Inset"
+        android:layout_width="145dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/login"
+        android:textColor="@android:color/background_light"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"/>
 
     <Button
-            android:id="@+id/button2"
-            android:layout_width="88dp"
-            android:layout_height="48dp"
-            android:layout_marginRight="30dp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/button5"
-            app:layout_constraintDimensionRatio="w,1:1"
-            app:layout_constraintRight_toLeftOf="@+id/button5" android:layout_marginEnd="30dp"
-            android:visibility="visible"/>
-
-    <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="7Super"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="10dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
+        android:id="@+id/buttonFB"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/social_facebook_box_blue"
+        android:visibility="visible"
+        app:layout_constraintDimensionRatio="w,1:1"
+        app:layout_constraintLeft_toLeftOf="@+id/btnLogin"
+        app:layout_constraintTop_toBottomOf="@+id/btnLogin"/>
 
     <Button
         android:id="@+id/btnTest"
@@ -158,6 +156,6 @@
         android:layout_height="wrap_content"
         android:text="Screen8"
         tools:layout_editor_absoluteX="2dp"
-        tools:layout_editor_absoluteY="-3dp" />
+        tools:layout_editor_absoluteY="-3dp"/>
 </android.support.constraint.ConstraintLayout>
 
