--- a/Kirakira/app/src/main/res/layout/activity_listen_and_repeat.xml
+++ b/Kirakira/app/src/main/res/layout/activity_listen_and_repeat.xml
@@ -19,26 +19,41 @@
             android:textColor="@android:color/holo_blue_light"
             app:layout_constraintHorizontal_bias="0.47" tools:layout_constraintRight_creator="1"
             tools:layout_constraintLeft_creator="1"/>
+
     <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            tools:layout_constraintRight_creator="1" tools:layout_constraintBottom_creator="1"
-            android:layout_marginStart="68dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginEnd="68dp" app:layout_constraintRight_toRightOf="parent"
-            tools:layout_constraintLeft_creator="1" android:layout_marginBottom="9dp"
-            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginLeft="68dp"
-            android:layout_marginRight="68dp" android:layout_marginTop="9dp"
-            app:layout_constraintTop_toBottomOf="@+id/listView" app:layout_constraintVertical_bias="0.75"
-            tools:layout_constraintTop_creator="1">
+        android:layout_width="0dp"
+        android:layout_height="110dp"
+        android:layout_marginBottom="9dp"
+        android:layout_marginEnd="68dp"
+        android:layout_marginLeft="68dp"
+        android:layout_marginRight="68dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="9dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/listView"
+        app:layout_constraintVertical_bias="0.75"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1">
+
         <Button
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent" android:id="@+id/btnStartRecord" android:layout_weight="1"
-                android:background="@drawable/startrecord"/>
+            android:id="@+id/btnStartRecord"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/startrecord"/>
+
         <Button
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent" android:id="@+id/btnPlayRecord" android:layout_weight="1"
-                android:background="@drawable/stopreplay" android:visibility="invisible"/>
+            android:id="@+id/btnPlayRecord"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/stopreplay"
+            android:visibility="invisible"/>
     </LinearLayout>
     <ListView
             android:layout_width="0dp"
