--- a/Kirakira/app/src/main/res/layout/activity_listen_and_repeat.xml
+++ b/Kirakira/app/src/main/res/layout/activity_listen_and_repeat.xml
@@ -38,7 +38,8 @@
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1">
+        tools:layout_constraintTop_creator="1"
+        app:layout_constraintDimensionRatio="w,2:1">
 
         <Button
             android:id="@+id/btnStartRecord"
